# Challenge_4_Group_7

./: CHECKLIST.md  Challenge4.md  README.md  challenge4_group7.ipynb  challenge4_group7_paper.tex  demos_50k_info.txt  demos_5k.npz  demos_5k_info.txt  pyproject.toml
logs/bc/: events.out.tfevents.1779643070.CO000GH6XGV1XCD.15754.0
logs/gail_5k/: events.out.tfevents.1779659050.CO000GH6XGV1XCD.15754.2
logs/gail_s42/: events.out.tfevents.1779643634.CO000GH6XGV1XCD.15754.1
