[project]
name = "challenge4-group7"
version = "0.1.0"
description = "GAIL on ALE/MsPacman-v5 — Challenge 4, Group 7"
requires-python = ">=3.11"

dependencies = [
    "numpy<2",
    "torch",
    "stable-baselines3[extra]>=2.3,<3",
    "gymnasium[atari,accept-rom-license]>=0.29.1,<1.1.0",
    "ale-py==0.10.1",
    "autorom[accept-rom-license]",
    "opencv-python==4.8.1.78",
    "tqdm",
    "rich",
    "tensorboard",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (>=7.2.0,<8.0.0)"
]
